--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,18 @@ name.out
 name.pdf
 *.swp
 *.aux
+figures/.~lock.slots.pptx#
+name.bbl
+name.bcf
+name.blg
+name.fff
+name.run.xml
+name.toc
+name.ttt
+si.bbl
+si.blg
+si.log
+si.out
+si.pdf
+si.toc
+
